# redpanda-labs

./: .gitignore  .gitmodules  CONTRIBUTING.adoc  README-TEMPLATE.adoc  README.md  go.work  go.work.sum  gulpfile.js  local-antora-playbook.yml  package-lock.json  package.json  test-schema.avsc
.github/workflows/: build-docs.yml  test-docs.yml  update-deps.yml
ai-agents/langchain-agent/: .env.example  .gitignore  README.adoc  pyproject.toml  vulture_whitelist.py
ai-agents/langchain-agent/src/agent/: auth.py  graph.py  main.py  sprite.py  tools.py
benthos-plugins/: README.md
cdc/: README.md
cdc/mysql-json/: README.md  create_debezium_mysql_connector.sh  docker-compose.yml
cdc/postgres-json/: README.md  create_debezium_postgres_connector.sh  docker-compose.yml
clients/chat-room/cloud/rust/: .env.example  Cargo.toml  README.adoc
clients/chat-room/cloud/rust/src/: admin.rs  consumer.rs  main.rs  producer.rs
clients/data/: README.md  nasdaq_historical.avsc  stock.avsc
clients/docs/: antora.yml
clients/java/: pom.xml
clients/js/: README.md  producer.js
clients/python/: README.md  consumer.py  producer.py  requirements.txt
connect-plugins/: README.md
data-transforms/: README.adoc  README.md
data-transforms/ai_demo/: Cargo.toml  README.md  export.py  setup.sh  transform.yaml
data-transforms/doc-tests/: config.json
data-transforms/docs/: antora.yml
data-transforms/flatten/: README.adoc  README.md  docker-compose.yml  go.mod  go.sum  profile.yml  test.js  transform.go  transform.yaml  transform_test.go
data-transforms/iss_demo/: README.adoc  README.md  docker-compose.yml  go.mod  go.sum  iss.avsc  iss_demo  post-schema.sh  profile.yml  test.js  transform.go  transform.yaml
data-transforms/jq/: .clang-format  .clang-tidy  Cargo.toml  Dockerfile  README.adoc  README.md  build.sh  profile.yml  transform.cc  transform.yaml
data-transforms/jq/doc-tests/: deploy-transform.sh  fetch-versions-and-rpk.json
data-transforms/jq/src/: main.rs
data-transforms/ts-converter/: Cargo.toml  README.adoc  profile.yml  test.js  transform.yaml
data-transforms/ts-converter/conf/: .bootstrap.yaml
data-transforms/ts-converter/doc-tests/: cleanup.json  deploy-transform.sh  produce.sh
data-transforms/ts-converter/src/: avro.rs  main.rs  schema.rs
docker-compose/: README.adoc
docs/: CONTRIBUTING.adoc  antora.yml  local-antora-playbook.yml  package-lock.json  package.json
docs-data/: personas.yaml
frontend-vercel/: README.md
kubernetes/: README.adoc
rip/: README.md
schema-registry-avro/: README.md  consumer.py  docker-compose.yml  producer.py  requirements.txt
setup-tests/: .doc-detective.json  cleanup.json  fetch-versions-and-rpk.json  install-rpk.json
utility-scripts/: init-lab-with-docs.sh  readme-template.adoc  symlink-docs.sh
(+542 files in other folders)
