[package]
name = "jq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
jaq-core = "1.2.1"
jaq-interpret = "1.2.1"
jaq-parse = "1.0.2"
jaq-std = "1.2.1"
redpanda-transform-sdk = "1.1.0"
serde_json = "1.0.114"
talc = { version = "4.4.1", default-features = false, features = ["lock_api"] }
