[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rdkafka = { version = "0.36.2", features = ["tokio", "ssl"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
